--- a/frontend/src/components/_articleContainer.css
+++ b/frontend/src/components/_articleContainer.css
@@ -9,6 +9,9 @@
   padding: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
+  max-width: 990px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .article-container .article-title {
