--- a/frontend/src/sections/_index.css
+++ b/frontend/src/sections/_index.css
@@ -3,16 +3,21 @@ body,
 #root {
   height: 100%;
 }
-
+p,
+li,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  margin: 0px;
   font-family: "Times New Roman", Times, serif;
-  font-weight: 500;
+}
+
+h4 {
+  margin-top: 8px;
+  margin-bottom: 3px;
+  font-weight: 600px;
 }
 
 #main-content {
@@ -24,4 +29,8 @@ h6 {
   padding: 20px;
   position: relative;
   text-align: center;
+}
+
+img.instruction-image {
+  width: 50%;
 }
